# rosezipper-experiment

./: .gitignore  Main.hs  rosezipper-experiment.cabal
Data/Tree/: Zipper.hs
