name:           rosezipper-experiment
version:        0.0.1
build-depends:  
    base < 5
  , containers
  , QuickCheck 
  , random

build-type:         Simple  
exposed-modules:    Data.Tree.Zipper, Main
ghc-options:        -O2 -Wall

executable exe
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base <5
    , containers

  default-language: Haskell2010

