name:           rosezipper-experiment
version:        0.0.1
cabal-version:  >=1.10
build-type:     Simple

executable exe
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:  
      base
    , containers
    , QuickCheck 
    , random
    , mtl
  other-modules: Data.Tree.Zipper
  default-language: Haskell2010

